<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/login_bg"
    android:layout_height="match_parent">

    <ImageView android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_login" />


    <LinearLayout
        android:id="@+id/tip_group"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_sjk"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:gravity="center"
            android:visibility="visible"
            android:src="@drawable/check_u"
            android:layout_marginRight="@dimen/my5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_tip_1"
            android:textColor="@color/gray1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_tip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:onClick="loginClick"
            android:text="@string/login_tip_2"
            android:textColor="#3A92E8"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@id/tip_group"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:overScrollMode="never" />

    <LinearLayout
        android:id="@+id/other_login_tip"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@id/recyclerView"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <View
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:background="@drawable/login_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_other_type"
            android:textColor="@color/gray1"
            android:textSize="15sp" />

        <View
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:background="@drawable/login_line" />
    </LinearLayout>


    <ImageView
        android:id="@+id/back_img" android:padding="10dp" android:layout_marginTop="30dp"
        android:layout_width="40dp" android:layout_marginLeft="8dp"
        android:layout_height="40dp" android:autofillHints="@string/black"
        android:src="@mipmap/icon_live_user_5" />
    <com.mc.phonelive.views.MyImageView
        android:id="@+id/tip"
        android:layout_marginTop="100dp"
        android:layout_width="@dimen/my80dp"
        android:layout_height="@dimen/my80dp"
        app:shape="round"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/login_tip_3"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="41dp"
        android:layout_marginRight="35dp"
        android:orientation="vertical">

        <LinearLayout android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
          >

            <TextView android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:minWidth="45dp"
                android:text="+86"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <ImageView android:visibility="gone"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/icon_login_down" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:hint="@string/login_input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            style="@style/line4"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:hint="@string/login_input_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray1"
                android:textSize="16sp" />

        </LinearLayout>
        <View
            style="@style/line4"
            />
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:enabled="false"
            android:gravity="center"
            android:onClick="loginClick"
            android:text="@string/login_immediately_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loginClick"
                android:text="@string/login_immediately_register"
                android:textColor="@color/fense"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="loginClick"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/gray1"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>