<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:visibility="gone"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/im_msg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="9dp"
            android:src="@mipmap/icon_back"
            />

        <TextView
            android:id="@+id/btn_ignore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/im_msg_ignore_unread"
            android:textColor="@color/fense"
            />

    </RelativeLayout>

    <View
        style="@style/line2" android:alpha="0.1"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<TextView-->
            <!--android:id="@+id/no_data"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:text="@string/im_no_msg"-->
            <!--android:textColor="@color/gray1"-->
            <!--android:textSize="14sp"-->
            <!--android:visibility="invisible"-->
            <!--/>-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView" android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            />

        <RelativeLayout
            android:id="@+id/btn_system_msg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            >

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="10dp"
                android:src="@mipmap/system_msg_icon"
                app:riv_oval="true"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_toRightOf="@id/avatar"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/im_system_msg"
                android:textColor="@color/black"
                android:textSize="16sp"
                />


            <TextView
                android:id="@+id/msg"
                android:text="@string/im_no_sys_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginRight="80dp"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/avatar"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                />


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/name"
                android:layout_marginRight="15dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/gray3"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/red_point"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/time"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_red_point"
                android:gravity="center"
                android:includeFontPadding="false"
                android:minWidth="14dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textColor="#000"
                android:textSize="10sp"
                android:visibility="invisible"
                />


            <View
                style="@style/line2" android:alpha="0.1"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>